# psim

./: .bazelrc  .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  CODEOWNERS  Dockerfile  README.md  WORKSPACE  conditions.txt  firing_far.py  firing_near.py  library.json  platformio.ini  plots.py  rendezvous.py  requirements.txt  setup.py  snapshot.txt
MATLAB/: README.md  actuator_command.m  actuator_state_update.m  actuators_off_command.m  actuators_off_state.m  adcs_update.m  almost_conserved_values.m  config.m  detumbler.m  dynamics_update.m  earth_perturb_pot.m  fitting_coeffs.mat  generate_mex_code.m  get_truth.m  initialize_computer_states.m  initialize_detumbler_state.m  initialize_main_state.m  initialize_pointer_state.m  initialize_states.m  install.m  main.m  main_state_update.m  matlab.mat  orbit_attitude_update.m  orbit_attitude_update_ode2.m  orbit_attitude_update_ode45.m  plot_trajectory.m  pointer.m  recursive_least_squares.m  run_sim.m  run_tests.m  sensor_reading.m  sensor_state_update.m  sensors_update.m  setup_path.m  test_true_orbit_propogator.m  test_update_sun_sensors.m  true_orbit_propagator.m  true_orbit_propagator2.m  true_orbit_propagator3.m  (+6 more)
bazel/: psim.bzl  psim_build.bzl  psim_configuration.BUILD.tpl  psim_workspace.bzl  pybind11.BUILD  variant.BUILD
config/: BUILD.bazel
docs/: Doxyfile
estimatortest/: Orbit-estimator-test.ipynb  plotutility.py
geograv/: CMakeLists.txt  README.md  geograv.hpp  gravmodelgen.py  main.cpp
geograv/include/: EGM2008_360.hpp  EGM2008_360.hpp.REMOVED.git-id  EGM96.hpp  EGM96_20.hpp  geograv.hpp
geograv/models/: GGM05S.GEO  GGM05S.GEO.REMOVED.git-id  GGM05S.ICGEM  GGM05S.ICGEM.REMOVED.git-id  egm96.REMOVED.git-id
geograv/teensy_test/: EGM96.hpp.REMOVED.git-id  EGM96_30.hpp  EGM96_50.hpp  teensy_test.ino
include/: README.txt  geomag.hpp  gnc_attitude_controller.hpp  gnc_attitude_estimation.hpp  gnc_constants.hpp  gnc_containers.hpp  gnc_environment.hpp  gnc_ode.hpp  gnc_orbit_estimation.hpp  gnc_utilities.hpp  lin.hpp
psim/: utilities.py
python/: .gitignore  BUILD.bazel  README.md  cmdprompt.py  config,json  console.py  data_containers.py  device_manager.py  main.py  pantest  requirements.txt  run_simulation.py  simulation.py  state_session.py
python/$TMPDIR/pan/FlightSoftware/: program
python/configs/: fc_and_adcs.json  fc_only.json
python/gsw/: README.md  index.html  main.py  requirements.txt
python/gsw/endpoint_configs/: echo_config.yml  search_es_config.yml  search_iridium_config.yml  search_statefields_config.yml  telemetry_config.yml
python/gsw/static/: test_client.js
python/psim/: README.md  __init__.py  __main__.py  _psim.cpp  config.py  sims.py  simulation.py  utilities.py
python/psim/_psim/: configuration.cpp  module.cpp  pybind11.hpp  simulations.cpp
python/psim/cli/: config.py
python/psim/config/: README.md  sensors.json  truth.json
python/psim/config/deployment/: truth.json
python/psim/plugins/: __init__.py  base.py  plot.py  snapshot.py  stop.py
python/ptest/: run_simulation.py  simulation.py  state_session.py
python/ptest/cases/: __init__.py  base.py  dcdc_checkout_case.py  empty_case.py  gomspace_checkout_case.py  mission.py
python/ptest/configs/: fc_only_native.json  fc_only_teensy.json
python/scripts/: main.py  single_orbit.py
python/test/: test_attitude_estimator.py  test_detumbler.py  test_orbit_controller.py  time_to_fire_test.py
python/tests/: test_cmdprompt.py  test_data_consumers.py  test_data_containers.py  test_state_session.py
python/usb_console/: cmdprompt.py  data_consumers.py  data_containers.py  gpstime.py  pan_logo.txt  plotter.py  quake_session.py  radio_session.py  radio_session.py~HEAD  run_simulation.py  simulation.py  state_session.py
python/usb_console/cases/: __init__.py  base.py  empty_case.py  mission.py
python/usb_console/configs/: README.md  all_devices.json  ci.json  empty.json  fc_and_adcs.json  fc_only.json  fc_only_native.json  fc_only_teensy.json  radio_keys.json
pythonwrapper/: common_ext.cpp  lin_ext.cpp  orb_ext.cpp  pwrap.cpp
src/: CMakeLists.txt  README.txt  gnc_attitude_controller.cpp  gnc_attitude_estimation.cpp  gnc_attitude_estimator.cpp  gnc_attitude_estimator.cpp.bak  gnc_constants.cpp  gnc_environment.cpp  gnc_ode.cpp  main.cpp  (+2 more)
test/: CMakeLists.txt  test.hpp  utilities_test.cpp
test/attitude_estimation_test/: test.cpp
test/containers_test/: test.cpp
test/environment_test/: test.cpp
test/gnc/: custom_assertions.hpp
test/gnc/attitude_estimator/: attitude_estimator_test.cpp
test/gnc/kalman_utl/: kalman_utl_test.cpp
test/gnc/misc/: ode_test.cpp  test.cpp  test.hpp  utilities_test.hpp
test/gnc/orbit/: orbit_test.cpp
test/gnc/orbit_controller/: test_orbit_controller.cpp
test/ode_test/: test.cpp
test/psim/: BUILD  BUILD.bazel
test/psim/core/: configuration_test.cpp  configuration_test_bad_name_config.txt  configuration_test_bad_value_config.txt  configuration_test_config.txt  configuration_test_duplicate_name_config.txt  configuration_test_two_config.txt  counter.cpp  counter.hpp  parameter_test.cpp  simulation_test.cpp  simulation_test_config.txt  state_field_lazy_test.cpp  state_field_test.cpp  state_field_valued_test.cpp  state_test.cpp
test/psim/python/: configuration_test.py  configuration_test_config.txt  test.py
test/psim/truth/: time_test.cpp  time_test_config.txt
test/psim/utilities/: exponential_filters_test.cpp  exponential_filters_test.txt
test/test_all/: attitude_estimation_test.cpp  attitude_estimation_test.hpp  attitude_estimator_test.cpp  attitude_estimator_test.hpp  containers_test.cpp  containers_test.hpp  environment_test.cpp  environment_test.hpp  ode_test.cpp  ode_test.hpp  test.cpp  test.hpp  utilities_test.cpp  utilities_test.hpp
test/test_attitude_estimator/: test_attitude_estimator.cpp
test/test_groundpropagator/: test_groundpropagator.cpp
test/test_kalman_utl/: test_kalman_utl.cpp
test/test_orbit/: test_orbit.cpp
test/test_orbit_controller/: test_orbit_controller.cpp
test/utilities_test/: test.cpp
(+1032 files in other folders)
