load("@rules_python//python:defs.bzl", "py_binary", "py_library")

load("//bazel:psim_build.bzl", "psim_py_extension")

# PSim in Python
psim_py_extension(
    name = "_psim",
    srcs = glob([
        "psim/_psim/**/*.hpp", "psim/_psim/**/*.inl",
        "psim/_psim/**/*.cpp",
    ]),
    deps = [
        "@variant//:variant", "//:psim_core", "//:psim_simulations",
    ],
    visibility = ["//visibility:private"],
)

py_library(
    name = "psim",
    srcs = glob(["psim/**/*.py"]),
    data = ["//config:parameters", "//config:plots"],
    deps = [":_psim"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "single_orbit",
    srcs = ["scripts/single_orbit.py"],
    deps = ["//python:psim"],
    visibility = ["//visibility:public"],
)
