load("@rules_python//python:defs.bzl", "py_test")

load("//bazel:psim_build.bzl", "psim_cc_test")

test_suite(name = "cc", tags = ["cc"])  # cc tests only
test_suite(name = "ci", tags = ["ci"])  # tests for ci only
test_suite(name = "py", tags = ["py"])  # Python tests only

psim_cc_test(
    name = "core",
    deps = ["//:psim_core"],
    tags = ["cc", "ci"],
)

psim_cc_test(
    name = "truth",
    deps = ["//:psim_core", "//:psim_truth"],
    tags = ["cc", "ci"],
)

psim_cc_test(
    name = "utilities",
    deps = ["//:psim_core", "//:psim_utilities"],
    tags = ["cc", "ci"],
)
